# langlearn

./: CHANGELOG.md  CLAUDE.md  DESIGN.md  MIGRATION.md  README.md  ROADMAP.md  punt-kit-audit.md  pyproject.toml
.beads/: README.md  config.yaml  issues.jsonl  metadata.json
.beads/.beads/: issues.jsonl
.claude/: settings.json
.github/workflows/: lint.yml  release.yml  test.yml
.vox/: config.md
src/langlearn/: __main__.py  cli.py  exceptions.py  server.py
src/langlearn/core/: __init__.py
src/langlearn/core/protocols/: __init__.py  domain_model_protocol.py  image_query_generation_protocol.py  language_protocol.py  media_enricher_protocol.py  media_generation_protocol.py  tts_protocol.py
src/langlearn/core/records/: __init__.py  base_record.py  base_record_dataclass.py
src/langlearn/languages/: __init__.py  registry.py
src/langlearn/languages/german/: __init__.py  language.py
src/langlearn/languages/german/models/: __init__.py  adjective.py  adverb.py  article.py  negation.py  noun.py  phrase.py  preposition.py  verb.py
src/langlearn/languages/german/records/: adjective_record.py  adverb_record.py  adverb_record_dataclass.py  article_record.py  factory.py  indefinite_article_record.py  negation_record.py  negative_article_record.py  noun_record.py  noun_record_dataclass.py  phrase_record.py  preposition_record.py  unified_article_record.py  verb_conjugation_record.py  verb_conjugation_record_dataclass.py  verb_imperative_record.py  verb_record.py
src/langlearn/languages/korean/: __init__.py  language.py
src/langlearn/languages/korean/models/: __init__.py  noun.py
src/langlearn/languages/korean/records/: __init__.py  noun_record.py
src/langlearn/languages/russian/: __init__.py  language.py
src/langlearn/languages/russian/models/: __init__.py  noun.py
src/langlearn/languages/russian/records/: __init__.py  noun_record.py
tests/: test_languages.py  test_protocols.py  test_records.py  test_smoke.py
